--- a/kakaobank/css/kakao.css
+++ b/kakaobank/css/kakao.css
@@ -273,14 +273,40 @@
 }
 
 .sky .moon h3{
-  margin-top: 263px;
+  margin-top: 205px;
   text-align: center;
+  color: #fff;
+  font-size: 40px;
+  font-weight: 600;
 }
 
 .sky .moon p{
   text-align: center;
+  margin-top: 24px;
+  font-size: 15px;
+  line-height: 1.7;
+  color: #666;
 }
 
 .sky .moon .gbtn{
+  display: flex;
+  justify-content: center;
+  margin-top: 15px;
+}
+
+.sky .moon .gbtn button{
+  width: 150px;
+  height: 50px;
   text-align: center;
+  margin: 3px;
+  border-radius: 10px;
+  border: none;
+  color: white;
+  background-color: rgba(255, 255, 255, 0.09);
+}
+
+.sky img{
+  width:429;
+  height: 563px;
+  margin-left: 25%;
 }
