--- a/kakao.css
+++ b/kakao.css
@@ -44,7 +44,7 @@
 .teddybear{
   width: 1080px;
   height: inherit;
-  background-image: url("../kaka.img/main-bg3.png");
+  background-image: url("./kaka.img/main-bg3.png");
   background-size: cover;
   position: absolute;
   top: 172px;
@@ -231,7 +231,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  background: white url("../kaka.img/home_map.png") no-repeat -12% 50%;
+  background: white url("./kaka.img/home_map.png") no-repeat -12% 50%;
 }
 
 .content-5 img{
@@ -309,4 +309,11 @@
   width:429;
   height: 563px;
   margin-left: 25%;
+}
+
+.fren{
+  margin-top: 32px;
+  width: auto;
+  height: 1062px;
+  background-color: red;
 }
