--- a/css/kakao.css
+++ b/css/kakao.css
@@ -1,10 +1,16 @@
-/* header */
+header{
+  width: auto;
+  display: flex;
+  justify-content: center;
+}
+
 .kakaosub{
   width: 1080px;
   height: 100px;
   display: flex;
   justify-content: space-between;
   align-items: center;
+  
 }
 
 .kakao-mn .main-menu{
@@ -13,17 +19,17 @@
 
 .kakao-mn .main-menu li{
   display: inline-block;
-  margin: 10px;
+  padding: 10px;
 }
 
 .kakao-mn .main-menu li a{
   text-decoration: none;
-  margin: 8x;
+  margin: 8px;
   color: black;
 }
 
 .kakaohead .kakao-focus{
-  margin: 8px;
+  padding: 8px;
 }
 
 .content{
@@ -44,14 +50,14 @@
 }
 
 .content h3{
-  margin-top: 135px;
+  padding-top: 135px;
   font-size: 40px;
   font-weight: 600;
 }
 
 .teddybear p{
   line-height: 25px;
-  margin-top: 20px;
+  padding-top: 20px;
 }
 
 .teddybear button{
@@ -60,12 +66,11 @@
   border-radius: 12px;
   background-color: white;
   border: 1px solid rgba(255, 255, 255, 0.3);
-  margin-top: 100px;
-  margin-left: 8px;
+  margin-top: 30px;
 }
 
 .jo-content{
-  margin-top: 75px;
+  padding-top: 75px;
   width: auto;
   height: 750px;
   background-color: white;
@@ -75,32 +80,32 @@
 
 .jo-content img{ 
   width: 500px;
-  margin-right: 180px;
+  padding-right: 180px;
 }
 
 .con-font h3{
-  margin-top: 230px;
+  padding-top: 230px;
   font-weight: bold;
   line-height: 1.3;
   font-size: 40px;
 }
 
 .con-font p{
-  margin-top: 24px;
+  padding-top: 24px;
   font-size: 15px;
   line-height: 1.5;
 }
 
-.con-font a button{
+.con-font button{
   width: 258px;
   height: 56px;
   font-size: 16px;
   border: none;
-  margin-top: 30px;
+  margin-top: 40px;
 }
 
 .content-2{
-  margin-top: 32px;
+  padding-top: 32px;
   width: auto;
   height: 750px;
   background-color: white;
@@ -108,13 +113,13 @@
   justify-content: center;
 }
 .content-2 .confont-2 h3{
-  margin-top: 150px;
+  padding-top: 150px;
   font-size: 40px;
   font-weight: bold;
 }
 
 .content-2 .confont-2 p{
-  margin-top: 24px;
+  padding-top: 24px;
   font-size: 16px;
   line-height: 1.7;
 }
@@ -130,14 +135,14 @@
 }
 
 .content-2 .confont-2 img{
-  margin-top: 30px;
+  padding-top: 30px;
   width: 440px;
   height: 150px;
   display: block;
 }
 
 .content-3{
-  margin-top: 32px;
+  padding-top: 32px;
   width: auto;
   height: 750px;
   background-color: white;
@@ -146,18 +151,18 @@
 }
 
 .content-3 img{
-  margin-left: -220px;
-  margin-right: 50px;
+  padding-left: -220px;
+  padding-right: 50px;
 }
 .content-3 .traveling h3{
   font-size: 40px;
   font-weight: bold;
   line-height: 1.35;
-  margin-top: 150px;
+  padding-top: 150px;
 }
 
 .content-3 .traveling p{
-  margin-top: 24px;
+  padding-top: 24px;
   font-weight: 400;
   line-height: 1.7;
   color: #666;
@@ -168,7 +173,7 @@
   width: 258px;
   height: 56px;
   font-size: 16px;
-  margin-top: 56px;
+  margin-top: 40px;
   background-color: #f6f6f6;
   border-radius: 10px;
   color: black;
@@ -176,7 +181,7 @@
 }
 
 .content-4 {  
-  margin-top: 32px;
+  padding-top: 32px;
   width: auto;
   height: 750px;
   display: flex;
@@ -188,7 +193,7 @@
 .content-4 img{
   width: 492px;
   height: 408px;
-  margin-left: 140px;
+  padding-left: 140px;
 
 }
 
@@ -202,7 +207,7 @@
   font-size: 15px;
   line-height: 1.7;
   color: #666;
-  margin-top: 10px;
+  padding-top: 10px;
 }
 
 .content-4 button{
@@ -218,7 +223,7 @@
 }
 
 .content-5 {  
-  margin-top: 32px;
+  padding-top: 32px;
   width: auto;
   height: 750px;
   display: flex;
@@ -236,11 +241,11 @@
   font-size: 40px;
   font-weight: bold;
   line-height: 1.35;
-  margin-left: 220px;
+  padding-left: 220px;
 }
 
 .content-5 .conGRE p{
-  margin-top: 24px;
+  padding-top: 24px;
   font-size: 15px;
   color: #666;
   line-height: 1.7;
@@ -257,9 +262,9 @@
 }
 
 .sky{
-  margin-top: 32px;
+  padding-top: 32px;
   width: auto;
-  height: 930px;
+  height: 924px;
   background-color: skyblue;
   display: flex;
   justify-content: center;
@@ -268,7 +273,7 @@
 
 
 .sky .moon h3{
-  margin-top: 205px;
+  padding-top: 205px;
   text-align: center;
   color: #fff;
   font-size: 40px;
@@ -277,7 +282,7 @@
 
 .sky .moon p{
   text-align: center;
-  margin-top: 24px;
+  padding-top: 24px;
   font-size: 15px;
   line-height: 1.7;
   color: #666;
@@ -286,14 +291,14 @@
 .sky .moon .gbtn{
   display: flex;
   justify-content: center;
-  margin-top: 15px;
+  padding-top: 15px;
 }
 
 .sky .moon .gbtn button{
   width: 150px;
   height: 50px;
   text-align: center;
-  margin: 3px;
+  padding: 3px;
   border-radius: 10px;
   border: none;
   color: white;
@@ -303,13 +308,40 @@
 .sky img{
   width:429;
   height: 563px;
-  margin-left: 25%;
+  padding-left: 25%;
 }
 
 .fren{
-  margin-top: 32px;
+  padding-top: 32px;
   width: auto;
   height: 800px;
-  background-color: red;
+  display: flex;
+  justify-content: center;
+}
+
+.fren .ifren h3{
+  font-size: 40px;
+  font-weight: bold;
+  line-height: 1.35;
+  padding-top: 150px;
+}
+
+.fren .ifren p{
+  padding-top: 24px;
+  font-size: 15px;
+  font-weight: 400;
+  line-height: 1.7;
+}
+
+.fren .ifren button{
+  display: block;
+  background-color: #f6f6f6;
+  width: 258px;
+  height: 56px;
+  margin-top: 15px;
+  margin-left: 25%;
+  border-radius: 10px;
+  border: none;
+  text-decoration: none;
 }
 
