--- a/sample.css
+++ b/sample.css
@@ -57,3 +57,48 @@ header .main-menu .sumenu .item_koko > ul{
   justify-content: center;
   justify-content: space-evenly;
 }
+
+section .slowbox{
+  width: 190px;
+  height: 50px;
+  text-align: center;
+  line-height: 50px;
+  border-radius: 25px;
+  background-color: wheat;
+  border: 1px solid darkcyan;
+  
+}
+
+section .slowbox li > ul{
+  display: none;
+  position: relative;
+}
+
+section .slowbox li:hover > ul{
+  display: block;
+
+}
+
+section .staticon .material-symbols-outlined{
+  position: absolute;
+  left: 150px;
+  top: 115px;
+}
+
+
+/* search */
+/* .search{
+  position: relative;
+  margin: 10px;
+}
+
+.search input{
+  width: 200px;
+  height: 25px;
+}
+
+.search .material-icons{
+  position: absolute;
+  bottom: 0;
+  left: 182px;
+} */
