--- a/css/kakao.css
+++ b/css/kakao.css
@@ -1,10 +1,15 @@
+body{
+
+}
 header{
   width: 100%;
-  height: 100px;
+  height: 80px;
   display: flex;
   justify-content: center;
   position: fixed;
   z-index: 10;
+  background-color: white;
+  border: 3px solid whitesmoke;
 }
 
 header .main-menu{
@@ -13,8 +18,7 @@ header .main-menu{
 
 header .ka{
   width: 1080px;
-  height: 100px;
-  /* background-color: white; */
+  height: 80px;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -378,6 +382,13 @@ section .apple-logo{
   justify-content: center;
 }
 
+.sky.ative{
+  background-color: #333b58;
+  transition: 0.6s;
+  
+}
+
+
 .sky .moon h3{
   padding-top: 205px;
   text-align: center;
@@ -588,3 +599,4 @@ footer .ifmg .logo img{
 footer .ard > span{
   padding: 20px 0 0 15px;
 }
+
