--- a/css/kakao.css
+++ b/css/kakao.css
@@ -1,6 +1,3 @@
-body{
-
-}
 header{
   width: 100%;
   height: 80px;
@@ -10,6 +7,7 @@ header{
   z-index: 10;
   background-color: white;
   border: 3px solid whitesmoke;
+  position: fixed;
 }
 
 header .main-menu{
@@ -55,6 +53,7 @@ header .main-menu > .sumenu > .item_koko{
   position: fixed;
   left: 0;
   z-index: 9;
+  cursor: pointer;
 }
 
 header .inner h4{
@@ -380,14 +379,13 @@ section .apple-logo{
   background-color: skyblue;
   display: flex;
   justify-content: center;
+
 }
 
-.sky.ative{
-  background-color: #333b58;
-  transition: 0.6s;
-  
-}
-
+ /* @keyframes trn {
+  0% { transform: translateY(100%); }
+  100% { transform: translateY(0); }
+} */
 
 .sky .moon h3{
   padding-top: 205px;
